# mixsea

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  HOW_TO_RELEASE.md  LICENSE  MANIFEST.in  Makefile  README.rst  environment.yml  environment_docs.yml  environment_rtfd.yml  pyproject.toml  readthedocs.yml  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_rtd.txt  setup.cfg  setup.py
.github/workflows/: mixsea-pytest.yml
docs/: Makefile  api.rst  conf.py  getting_started.ipynb  index.rst  installation.rst  intermediate_profile_example.ipynb  references.bib  requirements.txt  shearstrain-add-shear-only.ipynb  shearstrain.ipynb  shearstrain_details.ipynb  thorpe_detailed_look.ipynb  thorpe_scales.ipynb  tutorial.rst  tutorialnb.ipynb  usage.rst  zzreferences.rst
docs/_static/: theme_overrides.css
docs/source/: mixsea.rst  mixsea.tests.rst  modules.rst
mixsea/: __init__.py  helpers.py  nsq.py  overturn.py  shearstrain.py
mixsea/tests/: test_basic.py  test_helpers.py  test_overturn.py  test_shearstrain.py
mixsea/tests/data/: ctd_test_data.csv  ladcp_test_data.csv
src/mixsea/: __init__.py  helpers.py  nsq.py  overturn.py  shearstrain.py
tests/: conftest.py  test_basic.py  test_helpers.py  test_overturn.py  test_really_cool_feature.py
tests/data/: ladcp_test_data.csv
